# TestStat-CLI

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  README_EXE.md  build_exe.bat  build_exe.py  config.json  config_sample.json  dist_config.json  list_sample.txt  package_cli.ps1  package_exe.bat  package_exe.py  plan.md  project_list.json  project_list.yaml  pyproject.toml  rebuild_frontend.bat  requirements.md  requirements.txt  setup.bat  setup.py  test-analytics.bat  test-analytics.sh  test_output.csv  test_output.xlsx.csv  test_spec_analytics.py  test_stat_cli.py  tsana.bat  tsana.sh  tstat.bat  tstat.sh  tstat.spec
assets/: logo.txt
docs/: api_base_url_unify_plan.md  azure_devops_bug_pb_chart_plan.md  azure_devops_integration_plan.md  invalid_result_date_exclusion_plan.md  pb_chart_with_bugs_mockup.html  plan.md  requirements.md  sharepoint_label_auto_collect_plan.md  sharepoint_remote_list_plan.md  windows_server_iis_setup.md  windows_server_task_scheduler_setup.md
input_sample/: sample1.xlsx  (+4 more)
teststat-server/: .env  .env.example  .gitignore  README.md  alembic.ini  collect.bat  migrate_db.ps1  pyproject.toml  run_server.bat  setup_db.py  sidebar-check-model.db  sidebar-check.db  sync_bugs.bat
teststat-server/alembic/: env.py
teststat-server/alembic/versions/: 20260531_0001_initial.py  20260531_0002_add_projects.py  20260531_0003_add_plans.py  20260531_0004_add_holidays.py  20260531_0005_simplify_holidays.py  20260601_0006_add_progress_status_settings.py  20260601_0007_update_progress_status_threshold_defaults.py  20260601_0008_drop_progress_status_normal_threshold.py  20260601_0009_add_project_display_order.py  20260602_0010_add_project_planned_dates.py  20260602_0011_add_bug_snapshots.py  20260618_0012_add_project_bug_count_source.py  20260618_0013_rebuild_test_result_bug_snapshots.py  20260618_0014_burndown_test_result_bug_snapshots.py  20260618_0015_test_result_bug_snapshots_per_label.py  20260622_0016_add_plan_labels.py  20260622_0017_add_source_url_to_plan_labels.py  20260622_0018_add_project_pb_chart_range_source.py  20260622_0019_add_pb_chart_settings.py  20260623_0020_add_performance_indexes.py  20260623_0021_add_bug_state_color_settings.py  20260623_0022_add_cli_options_to_plan_labels.py  20260623_0023_add_subtask_id_to_plan_labels.py  20260624_0024_add_is_disabled_to_plan_labels.py  20260624_0025_add_project_azure_bug_settings.py  20260624_0026_drop_file_progress_sender.py  20260624_0027_add_plan_label_display_order.py  20260625_0028_add_project_bug_axis_max.py  20260630_0029_add_plan_actual_offset.py  20260703_0030_add_person_progress_counts.py  20260703_0031_repair_person_progress_counts.py
teststat-server/app/: config.py  database.py  main.py
teststat-server/app/crud/: __init__.py  bug.py  holiday.py  pb_chart.py  pb_chart.py~195376  plan.py  progress.py  project.py  setting.py
teststat-server/app/models/: __init__.py  bug.py  holiday.py  plan.py  progress.py  project.py  setting.py
teststat-server/app/routers/: __init__.py  azure_devops.py  bug.py  collect.py  holiday.py  plan.py  progress.py  project.py  setting.py
teststat-server/app/schemas/: __init__.py  azure_devops.py  bug.py  collect.py  holiday.py  pb_chart.py  plan.py  progress.py  project.py  setting.py
teststat-server/app/services/: azure_devops.py  collector.py
teststat-server/docs/: development_plan.md
teststat-server/scripts/: collect_labels.py  sync_bugs.ps1
teststat-server/tests/: test_azure_devops.py  test_bug.py  test_collector.py  test_holiday_crud.py  test_pb_chart.py  test_plan_crud.py  test_progress_crud.py  test_project_crud.py  test_setting_crud.py
(+111 files in other folders)
